WebCore/css/CSSParser.cpp
@@ -47,6 +47,7 @@
 #include "CSSReflectValue.h"
 #include "CSSRuleList.h"
 #include "CSSSelector.h"
+#include "CSSNthSelector.h"
 #include "CSSStyleRule.h"
 #include "CSSStyleSheet.h"
 #include "CSSUnicodeRangeValue.h"
@@ -4377,6 +4378,13 @@ UChar* CSSParser::text(int *length)
 CSSSelector* CSSParser::createFloatingSelector()
 {
     CSSSelector* selector = new CSSSelector;
+    m_floatingSelectors.add(selector);
+    return selector;
+}
+    
+CSSNthSelector* CSSParser::createFloatingNthSelector()
+{
+    CSSNthSelector* selector = new CSSNthSelector;
     m_floatingSelectors.add(selector);
     return selector;
 }
