WebCore/css/CSSSelector.h
@@ -41,6 +41,7 @@ namespace WebCore {
             , m_relation(Descendant)
             , m_match(None)
             , m_pseudoType(PseudoNotParsed)
+            , m_parsedNth(false)
         {
         }
 
@@ -54,6 +55,7 @@ namespace WebCore {
             , m_relation(Descendant)
             , m_match(None)
             , m_pseudoType(PseudoNotParsed)
+            , m_parsedNth(false)
         {
         }
 
@@ -188,6 +190,9 @@ namespace WebCore {
         unsigned m_relation           : 3; // enum Relation
         mutable unsigned m_match      : 4; // enum Match
         mutable unsigned m_pseudoType : 8; // PseudoType
+        
+    protected:
+        bool m_parsedNth              : 1; // used in CSSNthSelector
 
     private:
         void extractPseudoType() const;
